fix footer overlap

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -127,6 +127,12 @@ p {
   padding: 40px 32px;
 }
 
+@media (min-height: 435px) {
+  .footer-quiz {
+    position: initial;
+  }
+}
+
 .q-btn {
   &.btn-large {
     padding: 16px 32px;
